--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/prettier": "^2.3.2",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "@types/react-fontawesome": "^1.6.5",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-virtualized": "^9.21.13",
